// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dialog rendering renders expected elements 1`] = `
<div
  className="Dialog__backdrop"
>
  <Layer
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog Dialog--md TestClass"
    id="test-dialog"
    level={1}
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__heading"
      >
        <div
          className="Dialog__title"
          id="dialogTitle"
          title="Test"
        >
          Test
        </div>
      </div>
      <div
        className="Dialog__body TestClass"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          text="A"
        />
      </div>
    </React.Fragment>
  </Layer>
</div>
`;

exports[`Dialog rendering renders expected elements when boolean properties are set 1`] = `
<div
  className="Dialog__backdrop"
>
  <Layer
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog Dialog--md Dialog--stretch TestClass"
    id="test-dialog"
    level={1}
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__heading"
      >
        <div
          className="Dialog__title"
          id="dialogTitle"
          title="Test"
        >
          Test
        </div>
      </div>
      <div
        className="Dialog__body scrollable TestClass"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          text="A"
        />
      </div>
    </React.Fragment>
  </Layer>
</div>
`;

exports[`Dialog rendering renders expected elements when child has no className 1`] = `
<div
  className="Dialog__backdrop"
>
  <Layer
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog Dialog--md"
    id="test-dialog"
    level={1}
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__heading"
      >
        <div
          className="Dialog__title"
          id="dialogTitle"
          title="Test"
        >
          Test
        </div>
      </div>
      <div
        className="Dialog__body"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          text="A"
        />
      </div>
    </React.Fragment>
  </Layer>
</div>
`;

exports[`Dialog rendering renders expected elements when helpHref is set 1`] = `
<div
  className="Dialog__backdrop"
>
  <Layer
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog Dialog--md TestClass"
    id="test-dialog"
    level={1}
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__heading"
      >
        <div
          className="Dialog__title"
          id="dialogTitle"
          title="Test"
        >
          Test
        </div>
        <a
          className="Dialog__help"
          href="#"
          rel="noreferrer"
          target="_blank"
        >
          <Help />
          Help
        </a>
      </div>
      <div
        className="Dialog__body TestClass"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          text="A"
        />
      </div>
    </React.Fragment>
  </Layer>
</div>
`;

exports[`Dialog rendering renders expected elements when onSubmit is set 1`] = `
<div
  className="Dialog__backdrop"
>
  <Layer
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog Dialog--md"
    id="test-dialog"
    level={1}
    role="dialog"
  >
    <form
      className="Dialog__form"
      onSubmit={[Function]}
    >
      <React.Fragment>
        <div
          className="Dialog__heading"
        >
          <div
            className="Dialog__title"
            id="dialogTitle"
            title="Test"
          >
            Test
          </div>
        </div>
        <div
          className="Dialog__body TestClass"
        >
          This is a test
        </div>
        <div
          className="Dialog__buttons"
        >
          <Button
            id="a"
            text="A"
          />
        </div>
      </React.Fragment>
    </form>
  </Layer>
</div>
`;
